# pdx-puzzles

./: .gitignore  README.md
kotlin/: .gitignore  README.md  settings.gradle.kts
kotlin/advent/: build.gradle.kts
kotlin/advent/src/main/kotlin/: App.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/utilities/: Day.kt  getInput.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2015/: Y15D01.kt  Y15D02.kt  Y15D03.kt  Y15D04.kt  Y15D05.kt  Y15D06.kt  Y15D07.kt  Y15D08.kt  Y15D09.kt  Y15D10.kt  Y15D11.kt  Y15D12.kt  Y15D13.kt  Y15D14.kt  Y15D15.kt  Y15D16.kt  Y15D17.kt  Y15D18.kt  Y15D19.kt  Y15D20.kt  Y15D21.kt  Y15D22.kt  Y15D23.kt  Y15D24.kt  Y15D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2016/: Assembunny.kt  Y16D01.kt  Y16D02.kt  Y16D03.kt  Y16D04.kt  Y16D05.kt  Y16D06.kt  Y16D07.kt  Y16D08.kt  Y16D09.kt  Y16D10.kt  Y16D11.kt  Y16D12.kt  Y16D13.kt  Y16D14.kt  Y16D15.kt  Y16D16.kt  Y16D17.kt  Y16D18.kt  Y16D19.kt  Y16D20.kt  Y16D21.kt  Y16D22.kt  Y16D23.kt  Y16D24.kt  Y16D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2017/: Y17D01.kt  Y17D02.kt  Y17D03.kt  Y17D04.kt  Y17D05.kt  Y17D06.kt  Y17D07.kt  Y17D08.kt  Y17D09.kt  Y17D10.kt  Y17D11.kt  Y17D12.kt  Y17D13.kt  Y17D14.kt  Y17D15.kt  Y17D16.kt  Y17D17.kt  Y17D18.kt  Y17D19.kt  Y17D20.kt  Y17D21.kt  Y17D22.kt  Y17D23.kt  Y17D24.kt  Y17D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2018/: Ops.kt  Y18D01.kt  Y18D02.kt  Y18D03.kt  Y18D04.kt  Y18D05.kt  Y18D06.kt  Y18D07.kt  Y18D08.kt  Y18D09.kt  Y18D10.kt  Y18D11.kt  Y18D12.kt  Y18D13.kt  Y18D14.kt  Y18D15.kt  Y18D16.kt  Y18D17.kt  Y18D18.kt  Y18D19.kt  Y18D20.kt  Y18D21.kt  Y18D22.kt  Y18D23.kt  Y18D24.kt  Y18D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2019/: Fintcode.kt  Intcode.kt  Y19D01.kt  Y19D02.kt  Y19D04.kt  Y19D05.kt  Y19D07.kt  Y19D09.kt  Y19D10.kt  Y19D11.kt  Y19D13.kt  Y19D14.kt  Y19D15.kt  Y19D16.kt  Y19D17.kt  Y19D18.kt  Y19D19.kt  Y19D21.kt  Y19D23.kt  Y19D25.kt  Y2019D02.kt  Y2019D03.kt  Y2019D05.kt  Y2019D06.kt  Y2019D07.kt  Y2019D08.kt  Y2019D09.kt  Y2019D11.kt  Y2019D12.kt  Y2019D13.kt  Y2019D15.kt  Y2019D17.kt  Y2019D18.kt  Y2019D19.kt  Y2019D20.kt  Y2019D21.kt  Y2019D22.kt  Y2019D23.kt  Y2019D24.kt  Y2019D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2020/: Y20D01.kt  Y20D02.kt  Y20D03.kt  Y20D04.kt  Y20D05.kt  Y20D06.kt  Y20D07.kt  Y20D08.kt  Y20D09.kt  Y20D10.kt  Y20D11.kt  Y20D12.kt  Y20D13.kt  Y20D14.kt  Y20D15.kt  Y20D16.kt  Y20D17.kt  Y20D18.kt  Y20D19.kt  Y20D20.kt  Y20D21.kt  Y20D22.kt  Y20D23.kt  Y20D24.kt  Y20D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2021/: Y21D01.kt  Y21D02.kt  Y21D03.kt  Y21D04.kt  Y21D05.kt  Y21D06.kt  Y21D07.kt  Y21D08.kt  Y21D09.kt  Y21D10.kt  Y21D11.kt  Y21D12.kt  Y21D13.kt  Y21D14.kt  Y21D15.kt  Y21D16.kt  Y21D17.kt  Y21D18.kt  Y21D19.kt  Y21D20.kt  Y21D21.kt  Y21D22.kt  Y21D23.kt  Y21D24.kt  Y21D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2022/: Y22D01.kt  Y22D02.kt  Y22D03.kt  Y22D04.kt  Y22D05.kt  Y22D06.kt  Y22D07.kt  Y22D08.kt  Y22D09.kt  Y22D10.kt  Y22D11.kt  Y22D12.kt  Y22D13.kt  Y22D14.kt  Y22D15.kt  Y22D16.kt  Y22D17.kt  Y22D18.kt  Y22D19.kt  Y22D20.kt  Y22D21.kt  Y22D22.kt  Y22D23.kt  Y22D24.kt  Y22D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2023/: Y23D01.kt  Y23D02.kt  Y23D03.kt  Y23D04.kt  Y23D05.kt  Y23D06.kt  Y23D07.kt  Y23D08.kt  Y23D09.kt  Y23D10.kt  Y23D11.kt  Y23D12.kt  Y23D13.kt  Y23D14.kt  Y23D15.kt  Y23D16.kt  Y23D17.kt  Y23D18.kt  Y23D19.kt  Y23D20.kt  Y23D21.kt  Y23D22.kt  Y23D23.kt  Y23D24.kt  Y23D25.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2024/: Y24D016.kt  Y24D02.kt  Y24D03.kt  Y24D04.kt  Y24D05.kt  Y24D06.kt  Y24D07.kt  Y24D08.kt  Y24D09.kt  Y24D1.kt  Y24D10.kt  Y24D11.kt  Y24D12.kt  Y24D13.kt  Y24D14.kt  Y24D15.kt  Y24D16.kt  Y24D17.kt  Y24D18.kt  Y24D19.kt  Y24D2.kt  Y24D20.kt  Y24D21.kt  Y24D22.kt  Y24D23.kt  Y24D24.kt  Y24D25.kt  Y24D3.kt  Y24D4.kt
kotlin/advent/src/main/kotlin/org/gristle/pdxpuzzles/advent/y2025/: Y25D01.kt  Y25D02.kt  Y25D03.kt  Y25D04.kt  Y25D05.kt  Y25D06.kt  Y25D07.kt  Y25D08.kt
kotlin/advent/src/main/kotlin/utilities/: getInput.kt
kotlin/advent/src/test/kotlin/org/gristle/pdxpuzzles/advent/: Test2015.kt  Test2016.kt  Test2017.kt  Test2018.kt  Test2019.kt  Test2020.kt  Test2021.kt  Test2022.kt  Test2023.kt
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/: App.kt
kotlin/everybody_codes/: build.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/utilities/src/main/kotlin/: Utilities.kt
kotlin/utilities/src/main/kotlin/enums/: Nsew.kt
kotlin/utilities/src/main/kotlin/objects/: Coord.kt
kotlin/utilities/src/test/kotlin/: UtilitiesTest.kt
kotlin/utils/src/main/kotlin/: Utilities.kt
kotlin/utils/src/test/kotlin/: UtilitiesTest.kt
rust/: .gitignore  Cargo.toml
rust/advent/: Cargo.toml
rust/advent/src/utilities/: assembunny.rs  get_input.rs  hashes.rs  intcode.rs  mod.rs  opcode.rs
rust/everybody-codes/: .gitignore  Cargo.toml  LICENSE
rust/everybody-codes/src/utilities/: inputs.rs
rust/utilities/: Cargo.toml
rust/utilities/src/: collation.rs  graphs.rs  lib.rs  minmax.rs
rust/utilities/src/enums/: cardinals.rs  intercardinals.rs  mod.rs
rust/utilities/src/math/: formulae.rs  mod.rs
rust/utilities/src/parsing/: get_numbers.rs  mod.rs  try_get.rs
rust/utilities/src/structs/: coord.rs  grid.rs  hexagon.rs  indexer.rs  mod.rs  stopwatch.rs  store.rs  str_grid.rs  union_find.rs
rust/utilities/src/structs/grid/: grid_adjacent.rs  grid_constructors.rs  grid_display.rs  grid_errors.rs  grid_index.rs  grid_iterators.rs  grid_methods.rs  grid_rotation.rs  grid_scannable.rs
rust/utilities/src/structs/str_grid/: adjacent_metadata.rs  indexes_to_grid.rs  str_grid_error.rs
rust/utilities/src/structs/strgrid/: adjacent_metadata.rs  indexes_to_grid.rs  mod.rs  str_grid.rs  str_grid_error.rs
(+71 files in other folders)
