[profile.release]
debug = true

[workspace]

resolver = "2"

members = [
    "utilities",
    "advent", 
    "everybody-codes",
]

[workspace.dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
num-traits = "0.2.19"
indexmap = "2.7.0"
rustc-hash = "2.1.0"
thiserror = "1" 
ordered-float = "4.0"
advent-ocr = "0.1.5"
bit-set = "0.8.0"
bit-vec = "0.8.0"
lazy-regex = "3.3.0"
anyhow = "1"