[package]
name = "advent"
version = "0.1.0"
edition = "2024"

[dependencies]
utilities = { path = "../utilities" }
ureq = "2.11.0"
lazy-regex = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
ordered-float = { workspace = true }
advent-ocr = { workspace = true }
bit-set = { workspace = true }
bit-vec = { workspace = true }

[[bin]]
name = "advent-y19d01"
path = "src/bin/2019/y19d01.rs"

[[bin]]
name = "advent-y19d02"
path = "src/bin/2019/y19d02.rs"

[[bin]]
name = "advent-y19d03"
path = "src/bin/2019/y19d03.rs"

[[bin]]
name = "advent-y19d04"
path = "src/bin/2019/y19d04.rs"

[[bin]]
name = "advent-y19d05"
path = "src/bin/2019/y19d05.rs"

[[bin]]
name = "advent-y19d06"
path = "src/bin/2019/y19d06.rs"

[[bin]]
name = "advent-y19d07"
path = "src/bin/2019/y19d07.rs"

[[bin]]
name = "advent-y19d08"
path = "src/bin/2019/y19d08.rs"

[[bin]]
name = "advent-y19d09"
path = "src/bin/2019/y19d09.rs"

[[bin]]
name = "advent-y19d10"
path = "src/bin/2019/y19d10.rs"

[[bin]]
name = "advent-y19d11"
path = "src/bin/2019/y19d11.rs"

[[bin]]
name = "advent-y19d12"
path = "src/bin/2019/y19d12.rs"

[[bin]]
name = "advent-y19d13"
path = "src/bin/2019/y19d13.rs"

[[bin]]
name = "advent-y19d14"
path = "src/bin/2019/y19d14.rs"

#[[bin]]
#name = "advent-y19d15"
#path = "src/bin/2019/y19d15.rs"

#[[bin]]
#name = "advent-y19d16"
#path = "src/bin/2019/y19d16.rs"

#[[bin]]
#name = "advent-y19d17"
#path = "src/bin/2019/y19d17.rs"

#[[bin]]
#name = "advent-y19d18"
#path = "src/bin/2019/y19d18.rs"

#[[bin]]
#name = "advent-y19d19"
#path = "src/bin/2019/y19d19.rs"

#[[bin]]
#name = "advent-y19d20"
#path = "src/bin/2019/y19d20.rs"

#[[bin]]
#name = "advent-y19d21"
#path = "src/bin/2019/y19d21.rs"

#[[bin]]
#name = "advent-y19d22"
#path = "src/bin/2019/y19d22.rs"

#[[bin]]
#name = "advent-y19d23"
#path = "src/bin/2019/y19d23.rs"

#[[bin]]
#name = "advent-y19d24"
#path = "src/bin/2019/y19d24.rs"

#[[bin]]
#name = "advent-y19d25"
#path = "src/bin/2019/y19d25.rs"

[[bin]]
name = "advent-y20d01"
path = "src/bin/2020/y20d01.rs"

[[bin]]
name = "advent-y20d02"
path = "src/bin/2020/y20d02.rs"

[[bin]]
name = "advent-y20d03"
path = "src/bin/2020/y20d03.rs"

[[bin]]
name = "advent-y20d04"
path = "src/bin/2020/y20d04.rs"

[[bin]]
name = "advent-y20d05"
path = "src/bin/2020/y20d05.rs"

[[bin]]
name = "advent-y20d06"
path = "src/bin/2020/y20d06.rs"

[[bin]]
name = "advent-y20d07"
path = "src/bin/2020/y20d07.rs"

[[bin]]
name = "advent-y20d08"
path = "src/bin/2020/y20d08.rs"

[[bin]]
name = "advent-y20d09"
path = "src/bin/2020/y20d09.rs"

[[bin]]
name = "advent-y20d10"
path = "src/bin/2020/y20d10.rs"

[[bin]]
name = "advent-y20d11"
path = "src/bin/2020/y20d11.rs"

[[bin]]
name = "advent-y20d12"
path = "src/bin/2020/y20d12.rs"

[[bin]]
name = "advent-y20d13"
path = "src/bin/2020/y20d13.rs"

[[bin]]
name = "advent-y20d14"
path = "src/bin/2020/y20d14.rs"

[[bin]]
name = "advent-y20d15"
path = "src/bin/2020/y20d15.rs"

[[bin]]
name = "advent-y20d16"
path = "src/bin/2020/y20d16.rs"

[[bin]]
name = "advent-y20d17"
path = "src/bin/2020/y20d17.rs"

#[[bin]]
#name = "advent-y20d18"
#path = "src/bin/2020/y20d18.rs"

#[[bin]]
#name = "advent-y20d19"
#path = "src/bin/2020/y20d19.rs"

#[[bin]]
#name = "advent-y20d20"
#path = "src/bin/2020/y20d20.rs"

#[[bin]]
#name = "advent-y20d21"
#path = "src/bin/2020/y20d21.rs"

#[[bin]]
#name = "advent-y20d22"
#path = "src/bin/2020/y20d22.rs"

#[[bin]]
#name = "advent-y20d23"
#path = "src/bin/2020/y20d23.rs"

#[[bin]]
#name = "advent-y20d24"
#path = "src/bin/2020/y20d24.rs"

#[[bin]]
#name = "advent-y20d25"
#path = "src/bin/2020/y20d25.rs"

[[bin]]
name = "advent-y21d01"
path = "src/bin/2021/y21d01.rs"

[[bin]] 
name = "advent-y21d02"
path = "src/bin/2021/y21d02.rs"

[[bin]]
name = "advent-y21d03"
path = "src/bin/2021/y21d03.rs"

[[bin]]
name = "advent-y21d04"
path = "src/bin/2021/y21d04.rs"

[[bin]]
name = "advent-y21d05"
path = "src/bin/2021/y21d05.rs"

[[bin]]
name = "advent-y21d06"
path = "src/bin/2021/y21d06.rs"

[[bin]]
name = "advent-y21d07"
path = "src/bin/2021/y21d07.rs"

[[bin]]
name = "advent-y21d08"
path = "src/bin/2021/y21d08.rs"

[[bin]]
name = "advent-y21d09"
path = "src/bin/2021/y21d09.rs"

[[bin]]
name = "advent-y21d10"
path = "src/bin/2021/y21d10.rs"

[[bin]]
name = "advent-y21d11"
path = "src/bin/2021/y21d11.rs"

[[bin]]
name = "advent-y21d12"
path = "src/bin/2021/y21d12.rs"

[[bin]]
name = "advent-y21d13"
path = "src/bin/2021/y21d13.rs"

[[bin]]
name = "advent-y21d14"
path = "src/bin/2021/y21d14.rs"

#[[bin]]
#name = "advent-y21d15"
#path = "src/bin/2021/y21d15.rs"

#[[bin]]
#name = "advent-y21d16"
#path = "src/bin/2021/y21d16.rs"

#[[bin]]
#name = "advent-y21d17"
#path = "src/bin/2021/y21d17.rs"

#[[bin]]
#name = "advent-y21d18"
#path = "src/bin/2021/y21d18.rs"

#[[bin]]
#name = "advent-y21d19"
#path = "src/bin/2021/y21d19.rs"

#[[bin]]
#name = "advent-y21d20"
#path = "src/bin/2021/y21d20.rs"

#[[bin]]
#name = "advent-y21d21"
#path = "src/bin/2021/y21d21.rs"

#[[bin]]
#name = "advent-y21d22"
#path = "src/bin/2021/y21d22.rs"

#[[bin]]
#name = "advent-y21d23"
#path = "src/bin/2021/y21d23.rs"

#[[bin]]
#name = "advent-y21d24"
#path = "src/bin/2021/y21d24.rs"

#[[bin]]
#name = "advent-y21d25"
#path = "src/bin/2021/y21d25.rs"

[[bin]]
name = "advent-y22d01"
path = "src/bin/2022/y22d01.rs"

[[bin]]
name = "advent-y22d02"
path = "src/bin/2022/y22d02.rs"

[[bin]]
name = "advent-y22d03"
path = "src/bin/2022/y22d03.rs"

[[bin]]
name = "advent-y22d04"
path = "src/bin/2022/y22d04.rs"

[[bin]]
name = "advent-y22d05"
path = "src/bin/2022/y22d05.rs"

[[bin]]
name = "advent-y22d06"
path = "src/bin/2022/y22d06.rs"

[[bin]]
name = "advent-y22d07"
path = "src/bin/2022/y22d07.rs"

[[bin]]
name = "advent-y22d08"
path = "src/bin/2022/y22d08.rs"

[[bin]]
name = "advent-y22d09"
path = "src/bin/2022/y22d09.rs"

[[bin]]
name = "advent-y22d10"
path = "src/bin/2022/y22d10.rs"

[[bin]]
name = "advent-y22d11"
path = "src/bin/2022/y22d11.rs"

[[bin]]
name = "advent-y22d12"
path = "src/bin/2022/y22d12.rs"

[[bin]]
name = "advent-y22d13"
path = "src/bin/2022/y22d13.rs"

[[bin]]
name = "advent-y22d14"
path = "src/bin/2022/y22d14.rs"

[[bin]]
name = "advent-y22d15"
path = "src/bin/2022/y22d15.rs"

[[bin]]
name = "advent-y22d16"
path = "src/bin/2022/y22d16.rs"

[[bin]]
name = "advent-y22d17"
path = "src/bin/2022/y22d17.rs"

[[bin]]
name = "advent-y22d18"
path = "src/bin/2022/y22d18.rs"

[[bin]]
name = "advent-y22d19"
path = "src/bin/2022/y22d19.rs"

[[bin]]
name = "advent-y22d20"
path = "src/bin/2022/y22d20.rs"

[[bin]]
name = "advent-y22d21"
path = "src/bin/2022/y22d21.rs"

[[bin]]
name = "advent-y22d22"
path = "src/bin/2022/y22d22.rs"

#[[bin]]
#name = "advent-y22d23"
#path = "src/bin/2022/y22d23.rs"

#[[bin]]
#name = "advent-y22d24"
#path = "src/bin/2022/y22d24.rs"

#[[bin]]
#name = "advent-y22d25"
#path = "src/bin/2022/y22d25.rs"

[[bin]]
name = "advent-y23d01"
path = "src/bin/2023/y23d01.rs"

[[bin]]
name = "advent-y23d02"
path = "src/bin/2023/y23d02.rs"

[[bin]]
name = "advent-y23d03"
path = "src/bin/2023/y23d03.rs"

[[bin]]
name = "advent-y23d04"
path = "src/bin/2023/y23d04.rs"

[[bin]]
name = "advent-y23d05"
path = "src/bin/2023/y23d05.rs"

[[bin]]
name = "advent-y23d06"
path = "src/bin/2023/y23d06.rs"

[[bin]]
name = "advent-y23d07"
path = "src/bin/2023/y23d07.rs"

[[bin]]
name = "advent-y23d08"
path = "src/bin/2023/y23d08.rs"

[[bin]]
name = "advent-y23d09"
path = "src/bin/2023/y23d09.rs"

[[bin]]
name = "advent-y23d10"
path = "src/bin/2023/y23d10.rs"

[[bin]]
name = "advent-y23d11"
path = "src/bin/2023/y23d11.rs"

[[bin]]
name = "advent-y23d12"
path = "src/bin/2023/y23d12.rs"

[[bin]]
name = "advent-y23d13"
path = "src/bin/2023/y23d13.rs"

[[bin]]
name = "advent-y23d14"
path = "src/bin/2023/y23d14.rs"

[[bin]]
name = "advent-y23d15"
path = "src/bin/2023/y23d15.rs"

[[bin]]
name = "advent-y23d16"
path = "src/bin/2023/y23d16.rs"

[[bin]]
name = "advent-y23d17"
path = "src/bin/2023/y23d17.rs"

[[bin]]
name = "advent-y23d18"
path = "src/bin/2023/y23d18.rs"

[[bin]]
name = "advent-y23d19"
path = "src/bin/2023/y23d19.rs"

[[bin]]
name = "advent-y23d20"
path = "src/bin/2023/y23d20.rs"

[[bin]]
name = "advent-y23d21"
path = "src/bin/2023/y23d21.rs"

[[bin]]
name = "advent-y23d22"
path = "src/bin/2023/y23d22.rs"

[[bin]]
name = "advent-y23d23"
path = "src/bin/2023/y23d23.rs"

[[bin]]
name = "advent-y23d24"
path = "src/bin/2023/y23d24.rs"

[[bin]]
name = "advent-y23d25"
path = "src/bin/2023/y23d25.rs"

[[bin]]
name = "advent-y24d01"
path = "src/bin/2024/y24d01.rs"

[[bin]]
name = "advent-y24d02"
path = "src/bin/2024/y24d02.rs"

[[bin]]
name = "advent-y24d03"
path = "src/bin/2024/y24d03.rs"

[[bin]]
name = "advent-y24d04"
path = "src/bin/2024/y24d04.rs"

[[bin]]
name = "advent-y24d05"
path = "src/bin/2024/y24d05.rs"

[[bin]]
name = "advent-y24d06"
path = "src/bin/2024/y24d06.rs"

[[bin]]
name = "advent-y24d07"
path = "src/bin/2024/y24d07.rs"

[[bin]]
name = "advent-y24d08"
path = "src/bin/2024/y24d08.rs"

[[bin]]
name = "advent-y24d09"
path = "src/bin/2024/y24d09.rs"

[[bin]]
name = "advent-y24d10"
path = "src/bin/2024/y24d10.rs"

[[bin]]
name = "advent-y24d11"
path = "src/bin/2024/y24d11.rs"

[[bin]]
name = "advent-y24d12"
path = "src/bin/2024/y24d12.rs"

[[bin]]
name = "advent-y24d13"
path = "src/bin/2024/y24d13.rs"

[[bin]]
name = "advent-y24d14"
path = "src/bin/2024/y24d14.rs"

[[bin]]
name = "advent-y24d15"
path = "src/bin/2024/y24d15.rs"

[[bin]]
name = "advent-y24d16"
path = "src/bin/2024/y24d16.rs"

[[bin]]
name = "advent-y24d17"
path = "src/bin/2024/y24d17.rs"

[[bin]]
name = "advent-y24d18"
path = "src/bin/2024/y24d18.rs"

[[bin]]
name = "advent-y24d19"
path = "src/bin/2024/y24d19.rs"

[[bin]]
name = "advent-y24d20"
path = "src/bin/2024/y24d20.rs"

[[bin]]
name = "advent-y24d21"
path = "src/bin/2024/y24d21.rs"

[[bin]]
name = "advent-y24d22"
path = "src/bin/2024/y24d22.rs"

[[bin]]
name = "advent-y24d23"
path = "src/bin/2024/y24d23.rs"

[[bin]]
name = "advent-y24d24"
path = "src/bin/2024/y24d24.rs"

[[bin]]
name = "advent-y24d25"
path = "src/bin/2024/y24d25.rs"
