[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2024"

[dependencies]
utilities = { path = "../utilities" }
itertools = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
lazy-regex = { workspace = true }
#thiserror = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }

[[bin]]
name = "ec-y24d01"
path = "src/bin/2024/y24d01.rs"

[[bin]]
name = "ec-y24d02"
path = "src/bin/2024/y24d02.rs"

[[bin]]
name = "ec-y24d03"
path = "src/bin/2024/y24d03.rs"

[[bin]]
name = "ec-y24d04"
path = "src/bin/2024/y24d04.rs"

[[bin]]
name = "ec-y24d05"
path = "src/bin/2024/y24d05.rs"

[[bin]]
name = "ec-y24d06"
path = "src/bin/2024/y24d06.rs"

[[bin]]
name = "ec-y24d07"
path = "src/bin/2024/y24d07.rs"

[[bin]]
name = "ec-y24d08"
path = "src/bin/2024/y24d08.rs"

[[bin]]
name = "ec-y24d09"
path = "src/bin/2024/y24d09.rs"

[[bin]]
name = "ec-y24d10"
path = "src/bin/2024/y24d10.rs"

[[bin]]
name = "ec-y24d11"
path = "src/bin/2024/y24d11.rs"

[[bin]]
name = "ec-y24d12"
path = "src/bin/2024/y24d12.rs"

[[bin]]
name = "ec-y24d13"
path = "src/bin/2024/y24d13.rs"

[[bin]]
name = "ec-y24d14"
path = "src/bin/2024/y24d14.rs"

[[bin]]
name = "ec-y24d16"
path = "src/bin/2024/y24d16.rs"

[[bin]]
name = "ec-y24d17"
path = "src/bin/2024/y24d17.rs"

[[bin]]
name = "ec-y24d18"
path = "src/bin/2024/y24d18.rs"

[[bin]]
name = "ec-y24d19"
path = "src/bin/2024/y24d19.rs"

[[bin]]
name = "ec-y24d20"
path = "src/bin/2024/y24d20.rs"

[[bin]]
name = "ec-y25s1d01"
path = "src/bin/2025/y25s1d01.rs"

[[bin]]
name = "ec-y25s1d02"
path = "src/bin/2025/y25s1d02.rs"

[[bin]]
name = "ec-y25s1d03"
path = "src/bin/2025/y25s1d03.rs"

[[bin]]
name = "ec-y25s2d01"
path = "src/bin/2025/y25s2d01.rs"

[[bin]]
name = "ec-y25s2d02"
path = "src/bin/2025/y25s2d02.rs"

[[bin]]
name = "ec-y25s2d03"
path = "src/bin/2025/y25s2d03.rs"

[[bin]]
name = "ec-y25d01"
path = "src/bin/2025/y25d01.rs"

[[bin]]
name = "ec-y25d02"
path = "src/bin/2025/y25d02.rs"

[[bin]]
name = "ec-y25d03"
path = "src/bin/2025/y25d03.rs"

[[bin]]
name = "ec-y25d04"
path = "src/bin/2025/y25d04.rs"